se implementa mejopras en las BD y en la subida de motivos dependiendo de aprobo y rechazo dependiendo del rol
